 * New option --debug-imap; this just sets imaplib.Debug, thereby dumping
   archivemail's chat with the server to stdout. 
 * Fixed crash with Python 2.5 when archiving an empty maildir. (Thanks
   "Aidant") Closes: #1878940.
 * New option --all to archive all messages in a mailbox.  Closes: #1764846.
 * Fixed a crash when archiving maildirs with --days=0. (Thanks John Goerzen)

Version 0.7.2   - 9 November 2007

  * IMAP: fixed crash by working around python bug #1277098, which is still pending
    in python << 2.5. 

Version 0.7.1   - 7 November 2007

  * Fixed incompatibility with Python 2.5 which broke Maildir handling.
    Closes: #1670422
  * Username and password in IMAP URLs can now be double-quoted, so it should be
    no longer a problem if they contain delimiters like the '@' character. 
    Closes: #1640878
  * Invalid messages/files in Maildirs caused archivemail to silently stop
    processing mails and claim it's all done.  Now skip these and go ahead. 
    (Thanks Elan Ruusamäe for tracking this down.) Closes: #1783369.  
    (The Debian package has a different fix for this problem since 0.6.1-4,
    closing Debian bugs #255944 and #305902.)
  * Fixed IMAP message flag conversion which was completely broken. (Thanks
    Christian Brabandt)  Closes: Debian bug #434807
  * New option --copy: archive mail, but don't delete it from the mailbox. 
    This is mainly useful for testing purposes, and complements --delete.
    Closes: #981865, #988803, #1764851, Debian bug #434798
  * If running as root, only switch the effective uid and gid back if we have
    actually switched them before. Closes: #1762907
  * The automatic seteuid feature of archivemail is insecure and thus
    deprecated; it will be removed from later versions. 
  * Expand tilde in argument of long option --pwfile. (Thanks Christian
    Brabandt) Closes: Debian bug #434813
  * archivemail now accepts --days=0 
  * Fixed crash if --warn-duplicate is used with IMAP (Thanks Christian